--- a/sass/style.scss
+++ b/sass/style.scss
@@ -164,9 +164,10 @@ a.worklink, a.articlelink, a.morelink{
 }
 .yolk a{
   margin:10px;
-  padding:20px;
   color:black;
+  padding:0;
   &:hover{
+    padding:20px;
     background-color: black;
     color:white;
     &:active{
