--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 #doyouliek
-  a(href="https://www.facebook.com/groups/glitchglitch") U LIEK GLITCH?
+  a(href="/r/G_L_I_T_C_H") U LIEK GLITCH?
 
 .recently-updated
   h3 recent-updates
