--- a/sass/style.scss
+++ b/sass/style.scss
@@ -277,7 +277,8 @@ a.morelink {
 }
 // do you like G L I T C H
 
-@import "textshadowrainbow";
+// @import "textshadowrainbow";
+@import "glitchanim";
 
 footer{
   margin-top:20px;
