--- a/sass/style.scss
+++ b/sass/style.scss
@@ -275,9 +275,9 @@ a.morelink {
   padding:30px;
   @include animation(upcomingHue 12s infinite);
 }
-// do you like G L I T C H
 
-// @import "textshadowrainbow";
+// do you like G L I T C H
+@import "textshadowrainbow";
 @import "glitchanim";
 
 footer{
