--- a/sass/_glitchanim.scss
+++ b/sass/_glitchanim.scss
@@ -1,47 +1,45 @@
-
-.glitch{
+.glitch, .glitch a {
   position:relative;
-  // font-size:50px;
-  font-size: 200%;
+  font-size:50px!important;
+  // font-size: 200%;
   line-height: 50px;
   font-weight: bold;
+  &::before,
+  &::after{
+    content:attr(data-text);
+    font-weight: bold;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+  }
+  &::before{
+    left:2px;
+    text-shadow:-1px 0 red;
+    background:#fff;
+    /*animation*/
+    -webkit-animation:glitch-anim-2 0.7s infinite linear alternate-reverse;
+       -moz-animation:glitch-anim-2 0.7s infinite linear alternate-reverse;
+        -ms-animation:glitch-anim-2 0.7s infinite linear alternate-reverse;
+         -o-animation:glitch-anim-2 0.7s infinite linear alternate-reverse;
+            animation:glitch-anim-2 0.7s infinite linear alternate-reverse;
+
+  }
+  &::after{
+    clip:rect(20px, 400px, 30px, 0);
+    left:-2px;
+    text-shadow:-1px 0 blue;
+    background:#fff;
+    /*animation*/
+    -webkit-animation:glitch-anim 0.7s infinite linear alternate-reverse;
+       -moz-animation:glitch-anim 0.7s infinite linear alternate-reverse;
+        -ms-animation:glitch-anim 0.7s infinite linear alternate-reverse;
+         -o-animation:glitch-anim 0.7s infinite linear alternate-reverse;
+            animation:glitch-anim 0.7s infinite linear alternate-reverse;    
+  }
 }
 
-.glitch::before,
-.glitch::after{
-  content:attr(data-text);
-  font-weight: bold;
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-}
-
-.glitch::before{
-  left:2px;
-  text-shadow:-1px 0 red;
-  background:#fff;
-  /*animation*/
-  -webkit-animation:glitch-anim-2 2s infinite linear alternate-reverse;
-     -moz-animation:glitch-anim-2 2s infinite linear alternate-reverse;
-      -ms-animation:glitch-anim-2 2s infinite linear alternate-reverse;
-       -o-animation:glitch-anim-2 2s infinite linear alternate-reverse;
-          animation:glitch-anim-2 2s infinite linear alternate-reverse;
-}
-
-.glitch::after{
-  clip:rect(20px, 400px, 30px, 0);
-  left:-2px;
-  text-shadow:-1px 0 blue;
-  background:#fff;
-  /*animation*/
-  -webkit-animation:glitch-anim 2s infinite linear alternate-reverse;
-     -moz-animation:glitch-anim 2s infinite linear alternate-reverse;
-      -ms-animation:glitch-anim 2s infinite linear alternate-reverse;
-       -o-animation:glitch-anim 2s infinite linear alternate-reverse;
-          animation:glitch-anim 2s infinite linear alternate-reverse;
-}
 
 @-webkit-keyframes glitch-anim{
   0% {
