--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,56 +24,30 @@ head
   meta(name="viewport", content="width=device-width")
   //- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons
   
-  //- link(rel="stylesheet", href="/css/style.css")
-  //- link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css")
-  //- link(rel="stylesheet", href="/build.css")
-  
-  style.
-    body {
-      width:100%!important;
-      height:100%!important;
-      margin:0!important;
-      padding:0!important;
-      overflow:hidden!important;
-    }
-    iframe {
-      width:100%!important;
-      height:100%!important;
-      margin:0!important;
-      padding:0!important;
-      border:none;
-    }
+  link(rel="stylesheet", href="/css/style.css")
+  link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css")
+  link(rel="stylesheet", href="/build.css")
+
   //- More ideas for your <head> here: h5bp.com/d/head-Tips
   //-
   //- All JavaScript at the bottom, except this Modernizr build incl. Respond.js
   //- Respond is a polyfill for min/max-width media queries. Modernizr enables HTML5 elements & feature detects; 
   //- for optimal performance, create your own custom Modernizr build: www.modernizr.com/download/
-  //-script(src="/js/libs/modernizr-VERSION.min.js")
+  //- script(src="/js/libs/modernizr-VERSION.min.js")
   //if lt IE 9 
     script(src="//html5shiv.googlecode.com/svn/trunk/html5.js")
 body
-  canvas#banner
-  script(src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js")
-  script(src="http://yyolk.github.io/js/fast_vector.js")
-  script(src="http://yyolk.github.io/js/canvas.js")
-  script(src="http://yyolk.github.io/js/point.js")
-  script(src="http://yyolk.github.io/js/constraint.js")
-  script(src="http://yyolk.github.io/js/quad.js")
-  script(src="http://yyolk.github.io/js/yolk.js")
-  script(src="http://yyolk.github.io/js/cloth.js")
-
   script(src="/build.js")
-  //- iframe(src="http://yyolk.github.io/banner.html")
 
-  //- header
-  //-   div(class='yolk')
-  //-     a(href="/") Y O L K
-  //-   include nav
-  //- div(role="main")
-  //-   !{body}
-  //-   canvas(id="outline", width="100", height="200", style="position:fixed;top:20px;right:10px;")
-  //- footer
-  //-   div(class='zocial-html5')
+  header
+    div(class='yolk')
+      a(href="/") Y O L K
+    include nav
+  div(role="main")
+    !{body}
+    canvas(id="outline", width="100", height="200", style="position:fixed;top:20px;right:10px;")
+  footer
+    div(class='zocial-html5')
   //- script(src="/build.js")
   script
     var $ = require('jquery'); jQuery = $;
@@ -104,67 +78,67 @@ body
     }, 300);
 
   //- temporary placeholder
-  //- script
-  //-   var fracs = require('jquery-fracs');
-  //-   $("#outline").fracs("outline", {
-  //-     crop: true,
-  //-     styles: [{
-  //-         selector: 'header, footer',
-  //-         fillStyle: 'rgb(230,230,230)'
-  //-       }, {
-  //-         selector: 'header a',
-  //-         fillStyle: 'rgb(255,120,120)'
-  //-       }, {
-  //-         selector: 'div[role="main"] p a, h2 a',
-  //-         fillStyle: 'rgb(0,0,255)'
-  //-       }, {
-  //-         selector: '.work a',
-  //-         fillStyle: 'blue'
-  //-       }, {
-  //-         selector: '.yolk a',
-  //-         fillStyle: 'black'
-  //-       }, {
-  //-         selector: 'iframe',
-  //-         fillStyle: 'rgba(255, 236, 13, 0.5)'
-  //-       }, {
-  //-         selector: 'img',
-  //-         fillStyle: 'rgba(240, 230, 240, 0.4)'
-  //-       }
-  //-     ]
-  //-   });
-  //- script
-  //-   var Tip = require('tip');
-  //-   var keywords = ["video", "website", "collaboration", "code", "experiment", "freelance", "in real life", "response", "sound", "hardware"];
-  //-   $("#keywordFilter a").each(function(i, el){
-  //-       var tip = new Tip(keywords[i]);
-  //-       tip.position('north');
-  //-       $(el).hover(function(){
-  //-         tip.show(el);
-  //-       }, function(){
-  //-         tip.hide();
-  //-       });
-  //-   });
-  //- script
-  //-   var keyword = "";
-  //-   var filter = require('filter');
-  //-   var selector = document.querySelector('ul');
-  //-   $("#keywordFilter a").each(function(){
-  //-       $(this).click(function(){
-  //-         input = $(this).attr("title");
-  //-         subFilter(input);
-  //-         });
-  //-     });
-  //-   function subFilter(str){
-  //-     filter(selector, function(h4){
-  //-       if (h4.classList.contains(str)){
-  //-         return ~h4;
-  //-       }
-  //-     });
-  //-   }
+  script
+    var fracs = require('jquery-fracs');
+    $("#outline").fracs("outline", {
+      crop: true,
+      styles: [{
+          selector: 'header, footer',
+          fillStyle: 'rgb(230,230,230)'
+        }, {
+          selector: 'header a',
+          fillStyle: 'rgb(255,120,120)'
+        }, {
+          selector: 'div[role="main"] p a, h2 a',
+          fillStyle: 'rgb(0,0,255)'
+        }, {
+          selector: '.work a',
+          fillStyle: 'blue'
+        }, {
+          selector: '.yolk a',
+          fillStyle: 'black'
+        }, {
+          selector: 'iframe',
+          fillStyle: 'rgba(255, 236, 13, 0.5)'
+        }, {
+          selector: 'img',
+          fillStyle: 'rgba(240, 230, 240, 0.4)'
+        }
+      ]
+    });
+  script
+    var Tip = require('tip');
+    var keywords = ["video", "website", "collaboration", "code", "experiment", "freelance", "in real life", "response", "sound", "hardware"];
+    $("#keywordFilter a").each(function(i, el){
+        var tip = new Tip(keywords[i]);
+        tip.position('north');
+        $(el).hover(function(){
+          tip.show(el);
+        }, function(){
+          tip.hide();
+        });
+    });
+  script
+    var keyword = "";
+    var filter = require('filter');
+    var selector = document.querySelector('ul');
+    $("#keywordFilter a").each(function(){
+        $(this).click(function(){
+          input = $(this).attr("title");
+          subFilter(input);
+          });
+      });
+    function subFilter(str){
+      filter(selector, function(h4){
+        if (h4.classList.contains(str)){
+          return ~h4;
+        }
+      });
+    }
 
 
-  //- script(src="js/plugins.js")
-  //- script(src="js/script.js")
+  script(src="js/plugins.js")
+  script(src="js/script.js")
   //- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
   //- mathiasbynens.be/notes/async-analytics-snippet
 
