--- a/views/index.jade
+++ b/views/index.jade
@@ -1,3 +1,6 @@
+//- #doyouliek.glitch
+//-   a(href="/r/G_L_I_T_C_H") U LIEK GLITCH?
+
 unless recently_updated
   .recently-updated
     h3 recent-updates
