--- a/views/nav.jade
+++ b/views/nav.jade
@@ -4,7 +4,7 @@ div(class='nav')
   a(href="/work/my-thoughts-are-yours") mythoughtsareyours
   a(href="/work/yolkalyzer") yolkalyzer
   a(href="/work/0p3nr3p0") 0p3nr3p0
-  a(href="/work/samedifference") samedifference
+  //- a(href="/work/samedifference") samedifference
   a(href="/work/nothingbetweenus") nothingbetween.us
   
 div(class='social')
