--- a/sass/style.scss
+++ b/sass/style.scss
@@ -75,7 +75,7 @@
 @import "h5bp/h5bp-css-print-after.inc";
 // ==|== End print-media ====================================================
 @import "compass/css3";
-@import url(http://weloveiconfonts.com/api/?family=fontawesome|zocial|brandico);
+@import url(//weloveiconfonts.com/api/?family=fontawesome|zocial|brandico);
 
 /* fontawesome */
 [class*="fontawesome-"]:before {
