--- a/views/nav.jade
+++ b/views/nav.jade
@@ -6,14 +6,19 @@ div(class='nav')
   a(href="/work/0p3nr3p0") 0p3nr3p0
   //- a(href="/work/samedifference") samedifference
   a(href="/work/nothingbetweenus") nothingbetween.us
+  a(href="//yolk.cc") yolk.cc
   
 div(class='social')
-  a(href='http://twitter.com/yyolk', class='zocial-twitter')
-  a(href='http://facebook.com/yolkyolk', class='fontawesome-facebook')
-  a(href='http://soundcloud.com/yolk', class='zocial-soundcloud')
+  a(href='https://twitter.com/yyolk', class='zocial-twitter')
+  a(href='https://facebook.com/yolkyolk', class='fontawesome-facebook')
+  a(href='https://soundcloud.com/yolk', class='zocial-soundcloud')
   a(href='http://yolk.yolk.cc', class='zocial-tumblr')
-  a(href='http://www.youtube.com/yolkyyolk', class='zocial-youtube')
+  a(href='https://www.youtube.com/yolkyyolk', class='zocial-youtube')
   a(href='https://vimeo.com/yyolk', class='zocial-vimeo')
   a(href='https://github.com/yyolk', class='brandico-github')
   a(href='https://chrome.google.com/webstore/search/yolk', class='zocial-chrome')
   a(href='https://alpha.app.net/yolk', class='zocial-appnet')
+  span(style='margin-left:30px;')
+  a#signout(href='//yolk.cc', class='fontawesome-signout')
+    span(class='signout')
+        em See ya space cowboy
